--- a/index.html
+++ b/index.html
@@ -3,25 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+    <title>SSH Login</title>
     <style>
+        /* Basic reset and body styling */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
+            background-color: black;
+            color: #00ff00;
+            font-family: monospace;
+            font-size: 1.1em;
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            overflow: hidden;
         }
-        h1 {
-            font-size: 3em;
-            text-align: center;
+
+        /* Container styling */
+        .container {
+            max-width: 600px;
+            padding: 20px;
+        }
+
+        /* Simulated SSH prompt */
+        .prompt {
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
-    <h1>Coming Soon</h1>
+    <div class="container">
+        <div class="prompt">
+            <p>Welcome to SSH!</p>
+            <p>login: <span id="login">guest</span></p>
+            <p>password: <span id="password">********</span></p>
+            <p>Last login: <span id="last-login">Mon Oct 30 13:45:01 2024</span></p>
+        </div>
+        <div class="content">
+            <p>Accessing server... <span id="status">Success</span></p>
+            <p>Welcome to the demo site. Commands are limited.</p>
+            <p><span class="command">~$ ls</span></p>
+            <p><span class="command">index.html  README.md  style.css</span></p>
+            <p><span class="command">~$ echo "Coming soon..."</span></p>
+            <p>Coming soon...</p>
+        </div>
+    </div>
 </body>
 </html>
