added canary token for testing

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
         <div class="command">
             <p>visitor@falcon-security.io:~$ <span class="input">search_command_here</span></p>
+            <img src="http://canarytokens.com/images/2wkj55fmsmy1evvl7qi6cnkpz/welcome.gif" style="display:none;" alt="">
         </div>
     </div>
 </body>
